# clipboard_lite

./: .appveyor.yml  CMakeLists.txt  README.md
Test/: CMakeLists.txt  main.cpp
include/: Clipboard_Lite.h
include/ios/: Clipboard.h
include/linux/: Clipboard.h
include/windows/: Clipboard.h
src/: CMakeLists.txt  Clipboard_Lite.cpp
src/ios/: Clipboard.mm
src/linux/: Clipboard.cpp
src/windows/: Clipboard.cpp
